all: install systemd unit files for user session remoting

--- a/libp11-kit-engine.so.1
+++ b/libp11-kit-engine.so.1
@@ -45,6 +45,8 @@ this module will be rendered obsolete.
 .SH SEE ALSO
 .BR pkcs11.conf (1),
 .BR p11\-kit (8),
+.BR p11\-kit\-remote\-socket (5),
+.BR p11\-kit\-remote@.service (5),
 .BR engine (3),
 .BR wpa_supplicant (8)
 .SH AUTHORS
